--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin)
 set(STATES_SOURCES
         source/states/level1.hpp
         source/states/level2.hpp
+        source/states/level3.hpp
         source/states/menu-state.hpp
         source/states/loading-screen-state.hpp
         source/states/level-select-state.hpp
