new movement mechanism

--- a/config/level2.jsonc
+++ b/config/level2.jsonc
@@ -1170,6 +1170,9 @@
               },
               {
                 "type": "Movement",
+                "directedMovementMode": true,
+                "target_point": [-30,1,-6],
+                "max_positive_speed": 0.02,
                 "initial_angular_velocity": [0, 1, 0]
               }
             ],
