--- a/config/level1.jsonc
+++ b/config/level1.jsonc
@@ -1005,32 +1005,32 @@
 
               // left block
 
-              {
-                "position": [35, 0, -60],
-                "rotation": [0, 90, 0],
-                "scale": [6, 8, 0.25],
-                "components": [
-                  {
-                    "type": "Rigid Body",
-                    "bodyType": "cube",
-                    "static": false,
-                    "tag": "wall",
-                    "wallType": "right"
-                  },
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "cube",
-                    "material": "wallmat"
-                  },
-                  {
-                    "type": "Movement",
-                    "forward": [0, 0, 1],
-                    "max_positive_speed": 10,
-                    "constant_movement_z": true,
-                    "final_value": [35, 0, -17]
-                  }
-                ]
-              },
+              // {
+              //   "position": [35, 0, -60],
+              //   "rotation": [0, 90, 0],
+              //   "scale": [6, 8, 0.25],
+              //   "components": [
+              //     {
+              //       "type": "Rigid Body",
+              //       "bodyType": "cube",
+              //       "static": false,
+              //       "tag": "wall",
+              //       "wallType": "right"
+              //     },
+              //     {
+              //       "type": "Mesh Renderer",
+              //       "mesh": "cube",
+              //       "material": "wallmat"
+              //     },
+              //     {
+              //       "type": "Movement",
+              //       "forward": [0, 0, 1],
+              //       "max_positive_speed": 10,
+              //       "constant_movement_z": true,
+              //       "final_value": [35, 0, -17]
+              //     }
+              //   ]
+              // },
 
               //Goals
               {
@@ -1271,6 +1271,7 @@
         "components": [
           {
             "type": "Movement",
+            "forward": [1, 0, 0],
             "canRoll": true
           },
           {
