--- a/config/level2.jsonc
+++ b/config/level2.jsonc
@@ -1251,6 +1251,7 @@
           },
           {
             "type": "Movement",
+            "max_positive_speed": 10,
             "forward": [1, 0, 0]
           },
           {
