--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,8 @@ set(STATES_SOURCES
         source/states/level1.hpp
         source/states/level2.hpp
         source/states/level3.hpp
+        source/states/level4.hpp
+
         source/states/menu-state.hpp
         source/states/loading-screen-state.hpp
         source/states/level-select-state.hpp
