--- a/config/level1.jsonc
+++ b/config/level1.jsonc
@@ -1002,35 +1002,175 @@
               },
 
               // right block
+              {
+                "position": [35, 0, 35],
+                "rotation": [0, 90, 0],
+                "scale": [6, 8, 0.25],
+                "components": [
+                  {
+                    "type": "Rigid Body",
+                    "bodyType": "cube",
+                    "static": false,
+                    "tag": "wall",
+                    "wallType": "right"
+                  },
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "cube",
+                    "material": "wallmat"
+                  },
+                  {
+                    "type": "Movement",
+                    "forward": [0, 0, -1],
+                    "max_positive_speed": 8.0,
+                    "directedMovementMode": true,
+                    "target_point": [35, 0, -7]
+                  }
+                ]
+              },
 
               // left block
 
-              // {
-              //   "position": [35, 0, -60],
-              //   "rotation": [0, 90, 0],
-              //   "scale": [6, 8, 0.25],
-              //   "components": [
-              //     {
-              //       "type": "Rigid Body",
-              //       "bodyType": "cube",
-              //       "static": false,
-              //       "tag": "wall",
-              //       "wallType": "right"
-              //     },
-              //     {
-              //       "type": "Mesh Renderer",
-              //       "mesh": "cube",
-              //       "material": "wallmat"
-              //     },
-              //     {
-              //       "type": "Movement",
-              //       "forward": [0, 0, 1],
-              //       "max_positive_speed": 10,
-              //       "constant_movement_z": true,
-              //       "final_value": [35, 0, -17]
-              //     }
-              //   ]
-              // },
+              {
+                "position": [34, 0, -60],
+                "rotation": [0, 90, 0],
+                "scale": [6, 8, 0.25],
+                "components": [
+                  {
+                    "type": "Rigid Body",
+                    "bodyType": "cube",
+                    "static": false,
+                    "tag": "wall",
+                    "wallType": "right"
+                  },
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "cube",
+                    "material": "wallmat"
+                  },
+                  {
+                    "type": "Movement",
+                    "forward": [0, 0, 1],
+                    "max_positive_speed": 8.0,
+                    "directedMovementMode": true,
+                    "target_point": [34, 0, -17.5]
+                  }
+                ]
+              },
+
+              // right block
+              {
+                "position": [26, 0, 35],
+                "rotation": [0, 90, 0],
+                "scale": [6, 8, 0.25],
+                "components": [
+                  {
+                    "type": "Rigid Body",
+                    "bodyType": "cube",
+                    "static": false,
+                    "tag": "wall",
+                    "wallType": "right"
+                  },
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "cube",
+                    "material": "wallmat"
+                  },
+                  {
+                    "type": "Movement",
+                    "forward": [0, 0, -1],
+                    "max_positive_speed": 9.0,
+                    "directedMovementMode": true,
+                    "target_point": [26, 0, -7]
+                  }
+                ]
+              },
+
+              // left block
+
+              {
+                "position": [25, 0, -60],
+                "rotation": [0, 90, 0],
+                "scale": [6, 8, 0.25],
+                "components": [
+                  {
+                    "type": "Rigid Body",
+                    "bodyType": "cube",
+                    "static": false,
+                    "tag": "wall",
+                    "wallType": "right"
+                  },
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "cube",
+                    "material": "wallmat"
+                  },
+                  {
+                    "type": "Movement",
+                    "forward": [0, 0, 1],
+                    "max_positive_speed": 9.0,
+                    "directedMovementMode": true,
+                    "target_point": [25, 0, -17.5]
+                  }
+                ]
+              },
+
+              // right block
+              {
+                "position": [17, 0, 35],
+                "rotation": [0, 90, 0],
+                "scale": [6, 8, 0.25],
+                "components": [
+                  {
+                    "type": "Rigid Body",
+                    "bodyType": "cube",
+                    "static": false,
+                    "tag": "wall",
+                    "wallType": "right"
+                  },
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "cube",
+                    "material": "wallmat"
+                  },
+                  {
+                    "type": "Movement",
+                    "forward": [0, 0, -1],
+                    "max_positive_speed": 10.0,
+                    "directedMovementMode": true,
+                    "target_point": [17, 0, -7]
+                  }
+                ]
+              },
+
+              // left block
+
+              {
+                "position": [16, 0, -60],
+                "rotation": [0, 90, 0],
+                "scale": [6, 8, 0.25],
+                "components": [
+                  {
+                    "type": "Rigid Body",
+                    "bodyType": "cube",
+                    "static": false,
+                    "tag": "wall",
+                    "wallType": "right"
+                  },
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "cube",
+                    "material": "wallmat"
+                  },
+                  {
+                    "type": "Movement",
+                    "forward": [0, 0, 1],
+                    "max_positive_speed": 10.0,
+                    "directedMovementMode": true,
+                    "target_point": [16, 0, -17.5]
+                  }
+                ]
+              },
 
               //Goals
               {
@@ -1142,7 +1282,7 @@
       },
       //car
       {
-        "position": [10, 1, -10],
+        "position": [5.2, 1, -11.7],
         "scale": [1, 1, 1],
         "rotation": [0, 0, 0],
         "initalRotation": true,
@@ -1265,7 +1405,7 @@
       },
       //ball
       {
-        "position": [12, 1, -10],
+        "position": [10, 1, -11.7],
         "rotation": [0, 0, 0],
         "scale": [0.5, 0.5, 0.5],
         "components": [
