--- a/config/level3.jsonc
+++ b/config/level3.jsonc
@@ -1026,44 +1026,8 @@
                     "wallType": "left"
                   }
                 ]
-              },
-              //Goals
-              {
-                "position": [41.5, 0, -11.7],
-                "rotation": [0, 90, 0],
-                "scale": [2, 2.5, 1],
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "cube",
-                    "material": "glass"
-                  },
-                  {
-                    "type": "Rigid Body",
-                    "bodyType": "cube",
-                    "static": true,
-                    "tag": "goal"
-                  }
-                ]
-              },
-              {
-                "position": [2.2, 0, -11.7],
-                "rotation": [0, 90, 0],
-                "scale": [2, 2.5, 1],
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "cube",
-                    "material": "glass"
-                  },
-                  {
-                    "type": "Rigid Body",
-                    "bodyType": "cube",
-                    "static": true,
-                    "tag": "goal"
-                  }
-                ]
               }
+              //Goals
             ]
           },
           {
@@ -1158,7 +1122,7 @@
           },
           //bomb
           {
-            "position": [30, 30, 30],
+            "position": [30, 1, -18],
             "rotation": [35, 0, 0],
             "scale": [0.025, 0.025, 0.025],
             "components": [
@@ -1172,11 +1136,132 @@
                 "type": "Movement",
                 "initial_angular_velocity": [0, 1, 0],
                 "forward": [0, 0, -1],
-                "max_positive_sapeed": 10,
-                "constant_movement_x": true,
-                "constant_movement_y": true,
-                "constant_movement_z": true,
-                "final_value": [10, 1, -10]
+                "max_positive_speed": 8.0,
+                "directedMovementMode": true,
+                "target_point": [0, 0, 0]
+              }
+            ],
+            "children": [
+              {
+                "components": [
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "bomb-1-bomb-mat1",
+                    "material": "bomb-mat1"
+                  }
+                ]
+              },
+              {
+                "components": [
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "bomb-1-bomb-mat2",
+                    "material": "bomb-mat2"
+                  }
+                ]
+              }
+            ]
+          },
+          {
+            "position": [30, 1, -6],
+            "rotation": [35, 0, 0],
+            "scale": [0.025, 0.025, 0.025],
+            "components": [
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "static": false,
+                "tag": "bomb"
+              },
+              {
+                "type": "Movement",
+                "initial_angular_velocity": [0, 1, 0],
+                "forward": [0, 0, -1],
+                "max_positive_speed": 7.0,
+                "directedMovementMode": true,
+                "target_point": [0, 0, 0]
+              }
+            ],
+            "children": [
+              {
+                "components": [
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "bomb-1-bomb-mat1",
+                    "material": "bomb-mat1"
+                  }
+                ]
+              },
+              {
+                "components": [
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "bomb-1-bomb-mat2",
+                    "material": "bomb-mat2"
+                  }
+                ]
+              }
+            ]
+          },
+          {
+            "position": [25, 1, -18],
+            "rotation": [35, 0, 0],
+            "scale": [0.025, 0.025, 0.025],
+            "components": [
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "static": false,
+                "tag": "bomb"
+              },
+              {
+                "type": "Movement",
+                "initial_angular_velocity": [0, 1, 0],
+                "forward": [0, 0, -1],
+                "max_positive_speed": 6.0,
+                "directedMovementMode": true,
+                "target_point": [0, 0, 0]
+              }
+            ],
+            "children": [
+              {
+                "components": [
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "bomb-1-bomb-mat1",
+                    "material": "bomb-mat1"
+                  }
+                ]
+              },
+              {
+                "components": [
+                  {
+                    "type": "Mesh Renderer",
+                    "mesh": "bomb-1-bomb-mat2",
+                    "material": "bomb-mat2"
+                  }
+                ]
+              }
+            ]
+          },
+          {
+            "position": [25, 1, -6],
+            "rotation": [35, 0, 0],
+            "scale": [0.025, 0.025, 0.025],
+            "components": [
+              {
+                "type": "Rigid Body",
+                "bodyType": "cube",
+                "static": false,
+                "tag": "bomb"
+              },
+              {
+                "type": "Movement",
+                "initial_angular_velocity": [0, 1, 0],
+                "forward": [0, 0, -1],
+                "max_positive_speed": 5.0,
+                "directedMovementMode": true,
+                "target_point": [0, 0, 0]
               }
             ],
             "children": [
@@ -1204,7 +1289,7 @@
       },
       //car
       {
-        "position": [10, 1, -10],
+        "position": [5.2, 1, -11.7],
         "scale": [1, 1, 1],
         "rotation": [0, 0, 0],
         "initalRotation": true,
@@ -1326,46 +1411,7 @@
         ]
       },
       //ball
-      {
-        "position": [12, 1, -10],
-        "rotation": [0, 0, 0],
-        "scale": [0.3, 0.3, 0.3],
-        "components": [
-          {
-            "type": "Movement",
-            "canRoll": false
-          },
-          {
-            "type": "Ball Component"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": false,
-            "tag": "ball"
-          }
-        ],
-        "children": [
-          {
-            "components": [
-              {
-                "type": "Mesh Renderer",
-                "mesh": "ball-1-ball-mat1",
-                "material": "ball-mat1"
-              }
-            ]
-          },
-          {
-            "components": [
-              {
-                "type": "Mesh Renderer",
-                "mesh": "ball-2-ball-mat2",
-                "material": "ball-mat2"
-              }
-            ]
-          }
-        ]
-      },
+
       //directional light
       {
         "components": [
