jumping / boosting / enhancing collision physics

--- a/config/level1.jsonc
+++ b/config/level1.jsonc
@@ -1296,6 +1296,7 @@
           },
           {
             "type": "Movement",
+            "max_positive_speed": 8,
             "forward": [1, 0, 0]
           },
           {
