--- a/config/level3.jsonc
+++ b/config/level3.jsonc
@@ -15,7 +15,7 @@
     },
     "assets": {
       "shaders": {
-        "ball_test": {
+        "ball_shader": {
           "vs": "assets/shaders/ball.vert",
           "fs": "assets/shaders/lit-texture.frag"
         },
@@ -677,7 +677,7 @@
           "dissolveFactor": 1.0,
           "illumModel": 2.0,
           "type": "litTextured",
-          "shader": "lit-texture",
+          "shader": "ball_shader",
           "texture": "ballMat",
           "sampler": "default"
         },
@@ -1302,6 +1302,7 @@
           },
           {
             "type": "Movement",
+            "max_positive_speed": 6,
             "forward": [1, 0, 0]
           },
           {
