--- a/config/level4.jsonc
+++ b/config/level4.jsonc
@@ -1101,6 +1101,7 @@
           },
           {
             "type": "Movement",
+            "max_positive_speed": 8,
             "forward": [1, 0, 0]
           },
           {
